# umarace

./: .gitignore  README.md  pyproject.toml
data/: build_data.py  build_skill_table.py  climax_groups.npz  climax_npc.npy  npc_all.npy  npc_groups.npz  npc_recovery_bonus.npy  npc_skill_bonus.npy  race_group_map.npy  rival_candidates.npy  rival_index.npy  skill_bonus_table.npy  skill_data.json
tests/: test_rivals.py
umarace/: __init__.py  _formulas.py  _npc_data.py  _placement.py  _tables.py  _types.py  batch.py  npc.py
umarace/tests/: test_formulas.py  test_integration.py
